// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Badge] render should not render opacity when count is over than max count 1`] = `
<View
  badgePlacement="right"
  color="#34AFF9"
  opacity={1}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#34AFF9",
        "borderBottomColor": "#00ff0000",
        "borderBottomLeftRadius": 50,
        "borderBottomRightRadius": 50,
        "borderBottomWidth": 3,
        "borderLeftColor": "#00ff0000",
        "borderLeftWidth": 3,
        "borderRightColor": "#00ff0000",
        "borderRightWidth": 3,
        "borderTopColor": "#00ff0000",
        "borderTopLeftRadius": 50,
        "borderTopRightRadius": 50,
        "borderTopWidth": 3,
        "height": 45,
        "justifyContent": "center",
        "minWidth": 45,
        "position": "absolute",
        "right": -10,
        "top": -15,
        "width": "auto",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "marginLeft": 3,
          "marginRight": 3,
          "paddingBottom": 5,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 5,
          "textAlign": "center",
        },
        Object {
          "fontSize": 20,
          "fontWeight": "500",
        },
      ]
    }
    textColor="#FFFFFF"
  >
    500+
  </Text>
</View>
`;

exports[`[Badge] render should render badge when wrong variant 1`] = `
<View
  badgePlacement="right"
  color="#34AFF9"
  opacity={1}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#34AFF9",
        "borderBottomColor": "#00ff0000",
        "borderBottomLeftRadius": 50,
        "borderBottomRightRadius": 50,
        "borderBottomWidth": 3,
        "borderLeftColor": "#00ff0000",
        "borderLeftWidth": 3,
        "borderRightColor": "#00ff0000",
        "borderRightWidth": 3,
        "borderTopColor": "#00ff0000",
        "borderTopLeftRadius": 50,
        "borderTopRightRadius": 50,
        "borderTopWidth": 3,
        "height": 45,
        "justifyContent": "center",
        "minWidth": 45,
        "position": "absolute",
        "right": -10,
        "top": -15,
        "width": "auto",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "marginLeft": 3,
          "marginRight": 3,
          "paddingBottom": 5,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 5,
          "textAlign": "center",
        },
        Object {
          "fontSize": 20,
          "fontWeight": "500",
        },
      ]
    }
    textColor="#FFFFFF"
  >
    1
  </Text>
</View>
`;

exports[`[Badge] render should render dot badge 1`] = `
<View
  badgePlacement="right"
  color="#34AFF9"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#34AFF9",
        "borderBottomLeftRadius": 50,
        "borderBottomRightRadius": 50,
        "borderTopLeftRadius": 50,
        "borderTopRightRadius": 50,
        "height": 20,
        "justifyContent": "center",
        "position": "absolute",
        "right": -5,
        "top": -5,
        "width": 20,
      },
      undefined,
    ]
  }
/>
`;

exports[`[Badge] render should render left badge 1`] = `
<View
  badgePlacement="right"
  color="#34AFF9"
  opacity={1}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#34AFF9",
        "borderBottomColor": "#00ff0000",
        "borderBottomLeftRadius": 50,
        "borderBottomRightRadius": 50,
        "borderBottomWidth": 3,
        "borderLeftColor": "#00ff0000",
        "borderLeftWidth": 3,
        "borderRightColor": "#00ff0000",
        "borderRightWidth": 3,
        "borderTopColor": "#00ff0000",
        "borderTopLeftRadius": 50,
        "borderTopRightRadius": 50,
        "borderTopWidth": 3,
        "height": 45,
        "justifyContent": "center",
        "minWidth": 45,
        "position": "absolute",
        "right": -10,
        "top": -15,
        "width": "auto",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "marginLeft": 3,
          "marginRight": 3,
          "paddingBottom": 5,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 5,
          "textAlign": "center",
        },
        Object {
          "fontSize": 20,
          "fontWeight": "500",
        },
      ]
    }
    textColor="#FFFFFF"
  >
    1
  </Text>
</View>
`;

exports[`[Badge] render should render with + when count is over than max count 1`] = `
<View
  badgePlacement="right"
  color="#34AFF9"
  opacity={0.6}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#34AFF9",
        "borderBottomColor": "#00ff0000",
        "borderBottomLeftRadius": 50,
        "borderBottomRightRadius": 50,
        "borderBottomWidth": 3,
        "borderLeftColor": "#00ff0000",
        "borderLeftWidth": 3,
        "borderRightColor": "#00ff0000",
        "borderRightWidth": 3,
        "borderTopColor": "#00ff0000",
        "borderTopLeftRadius": 50,
        "borderTopRightRadius": 50,
        "borderTopWidth": 3,
        "height": 45,
        "justifyContent": "center",
        "minWidth": 45,
        "position": "absolute",
        "right": -10,
        "top": -15,
        "width": "auto",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "marginLeft": 3,
          "marginRight": 3,
          "paddingBottom": 5,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 5,
          "textAlign": "center",
        },
        Object {
          "fontSize": 20,
          "fontWeight": "500",
        },
      ]
    }
    textColor="#FFFFFF"
  >
    500+
  </Text>
</View>
`;

exports[`[Badge] render should render without crashing 1`] = `
<View
  badgePlacement="right"
  color="#34AFF9"
  opacity={1}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#34AFF9",
        "borderBottomColor": "#00ff0000",
        "borderBottomLeftRadius": 50,
        "borderBottomRightRadius": 50,
        "borderBottomWidth": 3,
        "borderLeftColor": "#00ff0000",
        "borderLeftWidth": 3,
        "borderRightColor": "#00ff0000",
        "borderRightWidth": 3,
        "borderTopColor": "#00ff0000",
        "borderTopLeftRadius": 50,
        "borderTopRightRadius": 50,
        "borderTopWidth": 3,
        "height": 45,
        "justifyContent": "center",
        "minWidth": 45,
        "position": "absolute",
        "right": -10,
        "top": -15,
        "width": "auto",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "marginLeft": 3,
          "marginRight": 3,
          "paddingBottom": 5,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 5,
          "textAlign": "center",
        },
        Object {
          "fontSize": 20,
          "fontWeight": "500",
        },
      ]
    }
    textColor="#FFFFFF"
  >
    1
  </Text>
</View>
`;
